# tool-as-guide

./: README.md
examples/01-pizza-ordering/: LICENSE  README.md  demo.py  pizza_guide.py  pyproject.toml  server.py
examples/02-medical-triage/: .gitignore  README.md  fake_tools.py  medical_triage_demo.ipynb  requirements.txt  triage_guide.py
